# meerkat

./: .travis.yml  LICENSE  README.md  RELEASE_NOTES.md  codecov.yml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-test.yml
meerkat/: __init__.py  __main__.py  fake_monitor.py  fake_reporter.py  log_manager.py  monitor.py  monitor_factory.py  operator.py  reporter.py  telegram_controller.py
notebook/: monitor_test.ipynb
tests/: fake_monitor_test.py  fake_reporter_test.py  log_manager_test.py  monitor_factory_test.py  operator_test.py  telegram_controller_test.py  worker_test.py
