[metadata]
name = meerkat
version = attr: meerkat.__version__
url = https://github.com/msaltnet/meerkat
project_urls =
    Documentation = https://meerkat.msalt.net/
    Source Code = https://github.com/msaltnet/meerkat
    Issue Tracker = https://github.com/msaltnet/meerkat/issues/
license = MIT License
author = Jeong Seong-moon
author_email = salt.jeong@gmail.com
description = A monitoring and reporting system.
long_description = file: README.md, README-en_us.md, LICENSE
keywords = crypto, algorithm
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python

[options]
include_package_data = True
packages = find:
install_requires =
    requests
    python-dotenv
    jupyter
